traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    left()
    ^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    theWall= isFacingWall()
    ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    right()
    ^Snake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return ((getDirection() == Direction.EAST) && isFacingWall() && theWall) 
    ^